[project]
name = "ledgr_demo"
authors = [
    { name = "LEDGR Swiss", email = "dev@ledgr.ch"}
]
description = "Reproducible demo dataset for LEDGR development and beta exploration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
